--- a/pages/docs/button.mdx
+++ b/pages/docs/button.mdx
@@ -7,7 +7,7 @@ import { Normalbutton, Borderbutton, Outlinebutton } from "../../db/Testbutton";
 
 <Outlinebutton />
 
-```jsx filename="button" copy
+```jsx filename="testbutton" copy
 import React from "react";
 
 export default function Testbutton() {
