--- a/pages/docs/button.mdx
+++ b/pages/docs/button.mdx
@@ -1,5 +1,9 @@
 import React from "react";
-import { Normalbutton, Borderbutton, Outlinebutton } from "../../db/Testbutton";
+import {
+  Normalbutton,
+  Borderbutton,
+  Outlinebutton,
+} from "../../db/Testbutton.jsx";
 
 <Normalbutton />
 
