hue and some text setup

--- a/pages/docs/button.mdx
+++ b/pages/docs/button.mdx
@@ -1,9 +1,5 @@
 import React from "react";
-import {
-  Normalbutton,
-  Borderbutton,
-  Outlinebutton,
-} from "../../db/Testbutton.jsx";
+import { Normalbutton, Borderbutton, Outlinebutton } from "../../db/Button.jsx";
 
 <Normalbutton />
 
