--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -1,5 +1,5 @@
 import React from "react";
-import { Normalbutton, Borderbutton, Outlinebutton } from "../../db/Button.jsx";
+import { Normalbutton, Borderbutton, Outlinebutton } from "/db/Button.jsx";
 
 <Normalbutton />
 
