added getting started introduction

--- a/pages/docs/getting-started.mdx
+++ b/pages/docs/getting-started.mdx
@@ -1,1 +1,33 @@
-## getting started
+## Getting Started with Brainless UI 🚀
+
+Welcome to Brainless UI! In this guide, we'll walk you through the steps to get started with using our open-source UI component library. The best part? There's no installation required—just copy and paste the code snippets. However, please make sure you have Tailwind CSS installed, which you can learn more about in the official [Tailwind CSS documentation](https://tailwindcss.com/docs/installation).
+
+### Step 1: Install Tailwind CSS
+
+Before diving into Brainless UI, you need to have Tailwind CSS installed in your project. Follow the installation instructions provided in the [official Tailwind CSS documentation](https://tailwindcss.com/docs/installation) to set up Tailwind CSS in your development environment.
+
+### Step 2: Copy and Paste Brainless UI Components
+
+Once you have Tailwind CSS installed, you're ready to start using Brainless UI components. Simply navigate to the Brainless UI library and find the component you need from our comprehensive collection.
+
+Copy the code snippet for the desired component and paste it into your project's HTML or template file. Make sure to include the necessary Tailwind CSS classes as mentioned in the component documentation to ensure proper styling.
+
+### Step 3: Customize and Modify
+
+Brainless UI components are designed to be highly customizable. Feel free to modify the code and Tailwind CSS classes to match your specific design requirements. Tailwind CSS provides a rich set of utility classes that you can leverage to tweak the appearance and behavior of the components.
+
+Experiment with different variations, colors, and sizes to achieve the desired look and feel. Refer to the Tailwind CSS documentation for a comprehensive list of utility classes and customization options.
+
+### Step 4: Iterate and Build
+
+With Brainless UI, you can rapidly build your user interface without spending excessive time on component development. Leverage the pre-built components to speed up your development process and focus on implementing the core functionality of your application.
+
+As you progress, keep referring to the Brainless UI documentation for a detailed overview of available components and their usage. If you encounter any issues or have questions, don't hesitate to reach out to the active community of developers on our [GitHub repository](https://github.com/dcryptoniun/BrainLess-UI).
+
+### Step 5: Contribute and Collaborate
+
+Brainless UI is an open-source project that welcomes contributions and collaborations. If you have suggestions for improvements, bug fixes, or new components, feel free to contribute to the library. Join our growing community of developers, share your expertise, and help shape the future of Brainless UI.
+
+Visit our [website](https://brainless-ui.vercel.app/) and explore our [GitHub repository](https://github.com/dcryptoniun/BrainLess-UI) for additional resources, documentation, and community support. Get started with Brainless UI today and unlock a world of effortless UI development possibilities!
+
+Happy coding! 🎉
