--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -1,2 +1,23 @@
-#docs
-intro test
+## Introducing Brainless UI: The Effortless Open-Source UI Component Library
+
+Are you tired of spending countless hours building and styling UI components from scratch? Say goodbye to tedious coding and endless installations, and say hello to **Brainless UI**, your go-to open-source library for pre-built UI components using Tailwind CSS.
+
+Brainless UI is designed with simplicity and efficiency in mind. With just a few clicks, you can instantly enhance the visual appeal and functionality of your web applications. No need to worry about complex installations or dependencies. All you have to do is copy and paste the code, and you're ready to go!
+
+**Tailwind CSS**, known for its utility-first approach, provides a solid foundation for Brainless UI. Every component in our library is meticulously crafted to ensure compatibility and responsiveness across different devices and screen sizes. Whether you're building a landing page, an e-commerce site, or a web application, Brainless UI has got you covered.
+
+### Why choose Brainless UI?
+
+1. **No Installation Hassles:** Forget about complex setups or managing dependencies. With Brainless UI, you can simply copy and paste the code snippets and start using them right away.
+
+2. **Tailwind CSS Powered:** Built on the powerful Tailwind CSS framework, Brainless UI ensures consistent and responsive designs across all devices. Tailwind's utility-first approach allows you to modify and customize components with ease.
+
+3. **Comprehensive Component Collection:** From basic elements to complex components, Brainless UI offers a vast array of pre-built UI elements. You'll find everything you need to create stunning interfaces without reinventing the wheel.
+
+4. **Efficiency and Time-Saving:** With Brainless UI, you can significantly reduce development time and focus on implementing the core functionality of your application. Our library simplifies the UI development process, allowing you to iterate quickly and deliver projects faster.
+
+5. **Open-Source and Community-Driven:** Brainless UI is an open-source project with an active community of developers. You can contribute to its growth, suggest improvements, and collaborate with like-minded individuals.
+
+Embrace the simplicity and ease of Brainless UI and elevate your web development experience. Experience hassle-free UI components today—no installation required. Get started with Brainless UI and unlock a world of possibilities!
+
+Visit our website and GitHub repository to explore the library, documentation, and community support. Start creating beautiful and functional interfaces effortlessly with Brainless UI.
