--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,5 @@
 import Head from "next/head";
-import Nav from "../components/Nav";
-import Hero from "../components/Hero";
-import Footer from "../components/Footer";
+import Hero from "/components/Hero";
 
 export default function Home() {
   return (
@@ -14,9 +12,9 @@ export default function Home() {
         />
         <link rel="icon" href="/favicon.ico" />
       </Head>
-      <Nav />
+
       <Hero />
-      <Footer />
     </div>
-  );
+
+);
 }
