--- a/pages/docs/components.mdx
+++ b/pages/docs/components.mdx
@@ -1,1 +1,34 @@
-###components
+import React from "react";
+import Link from "next/link";
+
+export default function Comp() {
+  const items = [
+    { name: "Button", href: "/button" },
+   
+  ];
+
+return (
+
+<div className="mt-5">
+<h1 className="text-2xl font-bold text-center uppercase text-primary dark:text-dprimary">
+Components
+</h1>
+
+      <div className="grid gap-4 p-3 m-3 md:grid-cols-3">
+        {items.map((item, index) => (
+          <div
+            key={index}
+            className="w-auto ease-in-out hover:scale-110 duration-300 h-auto p-5 border-2 rounded-xl bg-light dark:bg-dark border-blight dark:border-bdark"
+          >
+            <Link href={`/docs/components/${item.href}`} passHref>
+              <p className="p-3 text-xl font-semibold text-center border-2 hover:bg-dark/10 dark:hover:bg-light/10 dark:bg-light/5 bg-dark/5  rounded-xl dark:border-blight border-bdark">
+                {item.name}
+              </p>
+            </Link>
+          </div>
+        ))}
+      </div>
+    </div>
+
+);
+}
