--- a/pages/docs/getting-started.mdx
+++ b/pages/docs/getting-started.mdx
@@ -1,6 +1,10 @@
+import { Steps } from "nextra-theme-docs";
+
 ## Getting Started with Brainless UI 🚀
 
 Welcome to Brainless UI! In this guide, we'll walk you through the steps to get started with using our open-source UI component library. The best part? There's no installation required—just copy and paste the code snippets. However, please make sure you have Tailwind CSS installed, which you can learn more about in the official [Tailwind CSS documentation](https://tailwindcss.com/docs/installation).
+
+<Steps>
 
 ### Step 1: Install Tailwind CSS
 
@@ -30,4 +34,5 @@ Brainless UI is an open-source project that welcomes contributions and collabora
 
 Visit our [website](https://brainless-ui.vercel.app/) and explore our [GitHub repository](https://github.com/dcryptoniun/BrainLess-UI) for additional resources, documentation, and community support. Get started with Brainless UI today and unlock a world of effortless UI development possibilities!
 
+</Steps>
 Happy coding! 🎉
